templates/motioneye_template.yaml
---
# Source: motioneye/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motioneye-svc
  labels:
    helm.sh/chart: motioneye-0.1
    app-name: motioneye
    component: "password-manager"
    managed-by: chynten
    created-by: chynten
    version: "master-amd64"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8765
      targetPort: 8765
  selector:
    app-name: motioneye
---
# Source: motioneye/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motioneye-deployment
  labels:
    helm.sh/chart: motioneye-0.1
    app-name: motioneye
    component: "password-manager"
    managed-by: chynten
    created-by: chynten
    version: "master-amd64"
spec:
  replicas: 1
  revisionHistoryLimit: 
  selector:
    matchLabels:
      app-name: motioneye
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app-name: motioneye
    spec:
      restartPolicy: Always
      containers:
        - name: motioneye
          image: "ccrisan/motioneye:master-amd64"
          imagePullPolicy: IfNotPresent
          securityContext:
            {}
          resources:
            {}
          readinessProbe:
            httpGet:
              path: /
              port: 8765
            failureThreshold: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8765
            failureThreshold: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8765
            failureThreshold: 30
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /etc/motioneye
              subPath: motioneye/conf
            - name: data
              mountPath: /var/lib/motioneye
              subPath: motioneye/data
      securityContext:
        {}
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: motioneye-pvc
---
# Source: motioneye/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motioneye-ingress
  labels:
    helm.sh/chart: motioneye-0.1
    app-name: motioneye
    component: "password-manager"
    managed-by: chynten
    created-by: chynten
    version: "master-amd64"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "cctv.example.com"
      secretName: motioneye-letsencrypt-certificate
  rules:
    - host: "cctv.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: motioneye-svc
                port:
                  number: 8765
